# Modular-RAG-Chatbot2

./: .gitignore  README.md  pyproject.toml
client/: app.py
client/components/: chat_ui.py  history_ui.py  upload_ui.py
client/services/: api.py
server/: config.py  main.py
server/rag/: chat_service.py  embeddings.py  pdf_loader.py  rag_chain.py  retriever.py  text_splitter.py  vectorstore.py
server/storage/chroma_db/: chroma.sqlite3
